Fix scrubber on mobile

--- a/ember/app/styles/flarum/discussion.less
+++ b/ember/app/styles/flarum/discussion.less
@@ -407,6 +407,10 @@
       font-size: 14px;
     }
   }
+  .scrubber-scrollbar {
+    height: 40vh !important;
+    max-height: none !important;
+  }
 }
 
 @media @tablet, @desktop, @desktop-hd {
